2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Fix the make check build.

	* gdk/gdkmm/general.h: set_source_pixbuf(): Add default parameter values, 
	as are already in gtkmm-3.0.
	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_menus.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_sizegroup.cc:
	* demos/gtk-demo/example_textview.cc:
	* demos/gtk-demo/example_treeview_treestore.cc:
	* demos/pixbuf-demo.cc: Port to the latest undeprecated gtkmm-2.4 API, 
	based on the gtkmm-3.0 versions of these demos.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	ComobBoxText: Add append(), prepend() and insert(), deprecating *_text().

	* gtk/gtkmm/comboboxtext.[h|cc]: Add append(), prepend() and insert(),
	depreacting append_text(), prepend_text() and insert_text(), so that the API
	matches the on in gtkmm 3 more. However, there is a bug open about 
	making sure that this is consistent across other classes.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Widget: Deprecated hide_all().

	* gtk/src/widget.hg: The existing hide() method should be used instead.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Deprecate HRuler and VRuler.

	* gtk/src/ruler.hg: Ruler was already deprecated, but HRuler and VRuler 
	were not.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Notebook: Deprecated get/set_group(), adding get/set_group_name().
	
	* gtk/src/notebook.hg: Follow the deprecation in GTK+ 2.24.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Notebook: Deprecated set_window_creation_hook().

	* gtk/src/notebook.[hg|ccg]: This method is deprecated in favour of the 
	existing create-window signal, but that still does not seem useful or 
	worth wrapping.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	AboutDialog: Deprecate set_email/url_hook(), adding signal_activated().
