@@ -1,3 +1,12 @@
+2011-01-15  Murray Cumming  <murrayc@murrayc.com>
+
+	ListViewText: Rename methods to be consistent with ComboBoxText.
+
+	* gtk/gtkmm/listviewtext.[h|cc]: Rename append_text(), insert_text(), and 
+	prepend_text() to append(), insert() and prepend() because that is what 
+	ComboBoxText now uses (because it has other append overloads).
+	Keep the old methods as deprecated.
+
 2011-01-14  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix the make check build.
